kubernetes/nextcloud/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
      - name: mycnf-volume
        configMap:
          name: mycnf
          items:
          - key: my.cnf
            path: my.cnf
      - name: mariadb
        persistentVolumeClaim:
          claimName: mariadb-claim
      containers:
      - name: mariadb
        image: mariadb
        args: ["--transaction-isolation=READ-COMMITTED", "--binlog-format=ROW", "--log-bin=mysqld-bin"]
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mycnf-volume
            mountPath: /etc/mysql/conf.d
            subPath: custom.cnf
          - name: mariadb
            mountPath: "/var/lib/mysql/"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
  namespace: nextcloud
spec:
  ports:
  - name: db
    port: 3306
  selector:
    app: mariadb
  type: ClusterIP
