kubernetes/nextcloud/nextcloud.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: mysqlini-volume
        configMap:
          name: mysqlini
          items:
          - key: mysql.ini
            path: mysql.ini
      - name: nextcloud-web
        persistentVolumeClaim:
          claimName: nextcloud-web-claim
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-claim
      containers:
      - name: nextcloud
        image: php:7-apache
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/local/etc/php/conf.d/mysql.ini
            subPath: mysql.ini
            name: mysqlini-volume
          - mountPath: "/var/www/html/"
            name: nextcloud-web
          - mountPath: "/data/"
            name: nextcloud-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-service
  namespace: nextcloud
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: nextcloud
  type: NodePort
