kubernetes/nextcloud/email.yaml
# ---
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: email-claim
#   namespace: nextcloud
# spec:
#   accessModes:
#   - ReadWriteMany
#   storageClassName: local-storage
#   selector:
#     matchLabels:
#       contenttype: "email"
#   resources:
#     requests:
#       storage: 20Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-sender
  namespace: nextcloud
  labels:
    app: email-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-sender
  template:
    metadata:
      labels:
        app: email-sender
    spec:    
      containers:
      - name: email-sender
        image: namshi/smtp
        ports:
        - name: smtp
          containerPort: 25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email
  namespace: nextcloud
  labels:
    app: email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:    
      volumes:
      # - name: email-volume
      #   persistentVolumeClaim:
      #     claimName: email-claim
      - name: email-config-volume
        configMap:
          name: email-config
          items:
          - key: config.json
            path: config.json
          defaultMode: 0744
      containers:
      - name: email
        image: djfarrelly/maildev
        ports:
        - name: smtp
          containerPort: 25
        - name: http
          containerPort: 80
        command:
          - "bin/maildev"
          - "--web=80"
          - "--smtp=25"
          - "--outgoing-host=email-sender"
          - "--outgoing-user=admin@bas"
          - "--auto-relay"
          - "--auto-relay-rules=/var/email/config.json"
        # args:

        # env:
        # - name: MAILNAME
        #   value: "admin.bas"
        # - name: PORT 
        #   value: "8025"
        # - name: MH_MAILDIR_PATH 
        #   value: "/email"
        # - name: MH_OUTGOING_SMTP 
        #   value: "/var/email/config.json"
        volumeMounts:
          - name: email-config-volume
            mountPath: "/var/email/config.json"
            subPath: "config.json"
          # - name: email-volume
          #   mountPath: "/email"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-sender
  name: email-sender
  namespace: nextcloud
spec:
  ports:
  - name: smtp
    targetPort: 25
    port: 25
  selector:
    app: email-sender
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email
  name: email
  namespace: nextcloud
spec:
  ports:
  - name: smtp
    targetPort: 25
    port: 25
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: email
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emailingress
  namespace: nextcloud
spec:
  rules:
  - host: nextcloud-email.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: email
          servicePort: 80
